// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The MobileAppsRendering stack matches the snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuAllowPolicy",
      "GuVpcParameter",
      "GuSubnetListParameter",
      "GuSubnetListParameter",
      "GuEc2App",
      "GuCertificate",
      "GuInstanceRole",
      "GuDescribeEC2Policy",
      "GuLoggingStreamNameParameter",
      "GuLogShippingPolicy",
      "GuDistributionBucketParameter",
      "GuGetDistributablePolicy",
      "GuParameterStoreReadPolicy",
      "GuAmiParameter",
      "GuHttpsEgressSecurityGroup",
      "GuWazuhAccess",
      "GuAutoScalingGroup",
      "GuApplicationLoadBalancer",
      "GuApplicationTargetGroup",
      "GuHttpsApplicationListener",
      "GuSecurityGroup",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "LoadBalancerMobileappsrenderingDnsName": {
      "Description": "DNS entry for LoadBalancerMobileappsrendering",
      "Value": {
        "Fn::GetAtt": [
          "LoadBalancerMobileappsrenderingB8B00ACB",
          "DNSName",
        ],
      },
    },
  },
  "Parameters": {
    "AMIMobileappsrendering": {
      "Description": "Amazon Machine Image ID for the app mobile-apps-rendering. Use this in conjunction with AMIgo to keep AMIs up to date.",
      "Type": "AWS::EC2::Image::Id",
    },
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "LoggingStreamName": {
      "Default": "/account/services/logging.stream.name",
      "Description": "SSM parameter containing the Name (not ARN) on the kinesis stream",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValueaccountservicesartifactbucketC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/account/services/artifact.bucket",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "VpcId": {
      "Default": "/account/vpc/primary/id",
      "Description": "Virtual Private Cloud to run EC2 instances within. Should NOT be the account default VPC.",
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::VPC::Id>",
    },
    "mobileappsrenderingPrivateSubnets": {
      "Default": "/account/vpc/primary/subnets/private",
      "Description": "A list of private subnets",
      "Type": "AWS::SSM::Parameter::Value<List<AWS::EC2::Subnet::Id>>",
    },
    "mobileappsrenderingPublicSubnets": {
      "Default": "/account/vpc/primary/subnets/public",
      "Description": "A list of public subnets",
      "Type": "AWS::SSM::Parameter::Value<List<AWS::EC2::Subnet::Id>>",
    },
  },
  "Resources": {
    "AutoScalingGroupMobileappsrenderingASG42891F00": {
      "Properties": {
        "HealthCheckGracePeriod": 120,
        "HealthCheckType": "ELB",
        "LaunchTemplate": {
          "LaunchTemplateId": {
            "Ref": "mobileTESTmobileappsrenderingAD91FF83",
          },
          "Version": {
            "Fn::GetAtt": [
              "mobileTESTmobileappsrenderingAD91FF83",
              "LatestVersionNumber",
            ],
          },
        },
        "MaxSize": "2",
        "MinSize": "1",
        "Tags": [
          {
            "Key": "App",
            "PropagateAtLaunch": true,
            "Value": "mobile-apps-rendering",
          },
          {
            "Key": "gu:cdk:version",
            "PropagateAtLaunch": true,
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "PropagateAtLaunch": true,
            "Value": "guardian/dotcom-rendering",
          },
          {
            "Key": "LogKinesisStreamName",
            "PropagateAtLaunch": true,
            "Value": {
              "Ref": "LoggingStreamName",
            },
          },
          {
            "Key": "Stack",
            "PropagateAtLaunch": true,
            "Value": "mobile",
          },
          {
            "Key": "Stage",
            "PropagateAtLaunch": true,
            "Value": "TEST",
          },
        ],
        "TargetGroupARNs": [
          {
            "Ref": "TargetGroupMobileappsrendering29320E35",
          },
        ],
        "VPCZoneIdentifier": {
          "Ref": "mobileappsrenderingPrivateSubnets",
        },
      },
      "Type": "AWS::AutoScaling::AutoScalingGroup",
    },
    "AutoScalingGroupMobileappsrenderingScalingPolicyCpuScalingPolicy25F424F1": {
      "Properties": {
        "AutoScalingGroupName": {
          "Ref": "AutoScalingGroupMobileappsrenderingASG42891F00",
        },
        "PolicyType": "TargetTrackingScaling",
        "TargetTrackingConfiguration": {
          "PredefinedMetricSpecification": {
            "PredefinedMetricType": "ASGAverageCPUUtilization",
          },
          "TargetValue": 10,
        },
      },
      "Type": "AWS::AutoScaling::ScalingPolicy",
    },
    "CertificateMobileappsrendering85649D08": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "DomainName": "mobile-rendering.mobile-aws.code.dev-guardianapis.com",
        "DomainValidationOptions": [
          {
            "DomainName": "mobile-rendering.mobile-aws.code.dev-guardianapis.com",
            "HostedZoneId": "TEST-HOSTED-ZONE-ID",
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          {
            "Key": "Name",
            "Value": "MobileAppsRendering/CertificateMobileappsrendering",
          },
          {
            "Key": "Stack",
            "Value": "mobile",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "ValidationMethod": "DNS",
      },
      "Type": "AWS::CertificateManager::Certificate",
      "UpdateReplacePolicy": "Retain",
    },
    "DescribeEC2PolicyFF5F9295": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "autoscaling:DescribeAutoScalingInstances",
                "autoscaling:DescribeAutoScalingGroups",
                "ec2:DescribeTags",
                "ec2:DescribeInstances",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "describe-ec2-policy",
        "Roles": [
          {
            "Ref": "InstanceRoleMobileappsrenderingEC64402A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DnsRecord": {
      "Properties": {
        "HostedZoneId": "TEST-HOSTED-ZONE-ID",
        "Name": "mobile-rendering.mobile-aws.code.dev-guardianapis.com.",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "LoadBalancerMobileappsrenderingB8B00ACB",
              "DNSName",
            ],
          },
        ],
        "TTL": "3600",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "GetDistributablePolicyMobileappsrendering8E649036": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:s3:::",
                    {
                      "Ref": "DistributionBucketName",
                    },
                    "/mobile/TEST/mobile-apps-rendering/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "GetDistributablePolicyMobileappsrendering8E649036",
        "Roles": [
          {
            "Ref": "InstanceRoleMobileappsrenderingEC64402A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "GetParametersByPath37B32C62": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "GetParametersByPath37B32C62",
        "Roles": [
          {
            "Ref": "InstanceRoleMobileappsrenderingEC64402A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "GuHttpsEgressSecurityGroupMobileappsrendering089F1660": {
      "Properties": {
        "GroupDescription": "Allow all outbound HTTPS traffic",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound HTTPS traffic",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          {
            "Key": "Stack",
            "Value": "mobile",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "VpcId": {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "GuHttpsEgressSecurityGroupMobileappsrenderingfromMobileAppsRenderingInternalIngressSecurityGroupMobileappsrenderingB407C3A230407E6A596B": {
      "Properties": {
        "Description": "Load balancer to target",
        "FromPort": 3040,
        "GroupId": {
          "Fn::GetAtt": [
            "GuHttpsEgressSecurityGroupMobileappsrendering089F1660",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "InternalIngressSecurityGroupMobileappsrendering486B411A",
            "GroupId",
          ],
        },
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "GuHttpsEgressSecurityGroupMobileappsrenderingfromMobileAppsRenderingLoadBalancerMobileappsrenderingSecurityGroupE0CCF7183040505B735B": {
      "Properties": {
        "Description": "Load balancer to target",
        "FromPort": 3040,
        "GroupId": {
          "Fn::GetAtt": [
            "GuHttpsEgressSecurityGroupMobileappsrendering089F1660",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "LoadBalancerMobileappsrenderingSecurityGroup86D57550",
            "GroupId",
          ],
        },
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "GuLogShippingPolicy981BFE5A": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "kinesis:Describe*",
                "kinesis:Put*",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:kinesis:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":stream/",
                    {
                      "Ref": "LoggingStreamName",
                    },
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "GuLogShippingPolicy981BFE5A",
        "Roles": [
          {
            "Ref": "InstanceRoleMobileappsrenderingEC64402A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "InstanceRoleMobileappsrenderingEC64402A": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ec2.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/AmazonSSMManagedInstanceCore",
              ],
            ],
          },
        ],
        "Path": "/",
        "Tags": [
          {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          {
            "Key": "Stack",
            "Value": "mobile",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "InternalIngressSecurityGroupMobileappsrendering486B411A": {
      "Properties": {
        "GroupDescription": "Allow restricted ingress from CIDR ranges",
        "SecurityGroupIngress": [
          {
            "CidrIp": "10.0.0.0/8",
            "Description": "Allow access on port 443 from 10.0.0.0/8",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          {
            "Key": "Stack",
            "Value": "mobile",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "VpcId": {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "InternalIngressSecurityGroupMobileappsrenderingtoMobileAppsRenderingGuHttpsEgressSecurityGroupMobileappsrenderingC4F35269304093993953": {
      "Properties": {
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "GuHttpsEgressSecurityGroupMobileappsrendering089F1660",
            "GroupId",
          ],
        },
        "FromPort": 3040,
        "GroupId": {
          "Fn::GetAtt": [
            "InternalIngressSecurityGroupMobileappsrendering486B411A",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupEgress",
    },
    "InternalIngressSecurityGroupMobileappsrenderingtoMobileAppsRenderingWazuhSecurityGroupB96243E1304031807BEA": {
      "Properties": {
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "WazuhSecurityGroup",
            "GroupId",
          ],
        },
        "FromPort": 3040,
        "GroupId": {
          "Fn::GetAtt": [
            "InternalIngressSecurityGroupMobileappsrendering486B411A",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupEgress",
    },
    "ListenerMobileappsrendering47F84352": {
      "Properties": {
        "Certificates": [
          {
            "CertificateArn": {
              "Ref": "CertificateMobileappsrendering85649D08",
            },
          },
        ],
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "TargetGroupMobileappsrendering29320E35",
            },
            "Type": "forward",
          },
        ],
        "LoadBalancerArn": {
          "Ref": "LoadBalancerMobileappsrenderingB8B00ACB",
        },
        "Port": 443,
        "Protocol": "HTTPS",
      },
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
    },
    "LoadBalancerMobileappsrenderingB8B00ACB": {
      "Properties": {
        "LoadBalancerAttributes": [
          {
            "Key": "deletion_protection.enabled",
            "Value": "true",
          },
        ],
        "Scheme": "internal",
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "LoadBalancerMobileappsrenderingSecurityGroup86D57550",
              "GroupId",
            ],
          },
          {
            "Fn::GetAtt": [
              "InternalIngressSecurityGroupMobileappsrendering486B411A",
              "GroupId",
            ],
          },
        ],
        "Subnets": {
          "Ref": "mobileappsrenderingPrivateSubnets",
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          {
            "Key": "Stack",
            "Value": "mobile",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "Type": "application",
      },
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
    },
    "LoadBalancerMobileappsrenderingSecurityGroup86D57550": {
      "Properties": {
        "GroupDescription": "Automatically created Security Group for ELB MobileAppsRenderingLoadBalancerMobileappsrendering801C2FFB",
        "Tags": [
          {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          {
            "Key": "Stack",
            "Value": "mobile",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "VpcId": {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "LoadBalancerMobileappsrenderingSecurityGrouptoMobileAppsRenderingGuHttpsEgressSecurityGroupMobileappsrenderingC4F35269304019F57E42": {
      "Properties": {
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "GuHttpsEgressSecurityGroupMobileappsrendering089F1660",
            "GroupId",
          ],
        },
        "FromPort": 3040,
        "GroupId": {
          "Fn::GetAtt": [
            "LoadBalancerMobileappsrenderingSecurityGroup86D57550",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupEgress",
    },
    "LoadBalancerMobileappsrenderingSecurityGrouptoMobileAppsRenderingWazuhSecurityGroupB96243E130401C238DEC": {
      "Properties": {
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "WazuhSecurityGroup",
            "GroupId",
          ],
        },
        "FromPort": 3040,
        "GroupId": {
          "Fn::GetAtt": [
            "LoadBalancerMobileappsrenderingSecurityGroup86D57550",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupEgress",
    },
    "ParameterStoreReadMobileappsrenderingA4006661": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/TEST/mobile/mobile-apps-rendering",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/TEST/mobile/mobile-apps-rendering/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "parameter-store-read-policy",
        "Roles": [
          {
            "Ref": "InstanceRoleMobileappsrenderingEC64402A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "TargetGroupMobileappsrendering29320E35": {
      "Properties": {
        "HealthCheckIntervalSeconds": 10,
        "HealthCheckPath": "/healthcheck",
        "HealthCheckProtocol": "HTTP",
        "HealthCheckTimeoutSeconds": 5,
        "HealthyThresholdCount": 5,
        "Port": 3040,
        "Protocol": "HTTP",
        "Tags": [
          {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          {
            "Key": "Stack",
            "Value": "mobile",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "TargetGroupAttributes": [
          {
            "Key": "deregistration_delay.timeout_seconds",
            "Value": "30",
          },
          {
            "Key": "stickiness.enabled",
            "Value": "false",
          },
        ],
        "TargetType": "instance",
        "UnhealthyThresholdCount": 2,
        "VpcId": {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
    },
    "WazuhSecurityGroup": {
      "Properties": {
        "GroupDescription": "Allow outbound traffic from wazuh agent to manager",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Wazuh event logging",
            "FromPort": 1514,
            "IpProtocol": "tcp",
            "ToPort": 1514,
          },
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Wazuh agent registration",
            "FromPort": 1515,
            "IpProtocol": "tcp",
            "ToPort": 1515,
          },
        ],
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          {
            "Key": "Stack",
            "Value": "mobile",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "VpcId": {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "WazuhSecurityGroupfromMobileAppsRenderingInternalIngressSecurityGroupMobileappsrenderingB407C3A23040A9B30033": {
      "Properties": {
        "Description": "Load balancer to target",
        "FromPort": 3040,
        "GroupId": {
          "Fn::GetAtt": [
            "WazuhSecurityGroup",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "InternalIngressSecurityGroupMobileappsrendering486B411A",
            "GroupId",
          ],
        },
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "WazuhSecurityGroupfromMobileAppsRenderingLoadBalancerMobileappsrenderingSecurityGroupE0CCF718304012C66B0D": {
      "Properties": {
        "Description": "Load balancer to target",
        "FromPort": 3040,
        "GroupId": {
          "Fn::GetAtt": [
            "WazuhSecurityGroup",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "LoadBalancerMobileappsrenderingSecurityGroup86D57550",
            "GroupId",
          ],
        },
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "mobileTESTmobileappsrenderingAD91FF83": {
      "DependsOn": [
        "InstanceRoleMobileappsrenderingEC64402A",
      ],
      "Properties": {
        "LaunchTemplateData": {
          "IamInstanceProfile": {
            "Arn": {
              "Fn::GetAtt": [
                "mobileTESTmobileappsrenderingProfileA8EFA7CB",
                "Arn",
              ],
            },
          },
          "ImageId": {
            "Ref": "AMIMobileappsrendering",
          },
          "InstanceType": "t4g.small",
          "MetadataOptions": {
            "HttpTokens": "required",
          },
          "SecurityGroupIds": [
            {
              "Fn::GetAtt": [
                "GuHttpsEgressSecurityGroupMobileappsrendering089F1660",
                "GroupId",
              ],
            },
            {
              "Fn::GetAtt": [
                "WazuhSecurityGroup",
                "GroupId",
              ],
            },
          ],
          "TagSpecifications": [
            {
              "ResourceType": "instance",
              "Tags": [
                {
                  "Key": "gu:cdk:version",
                  "Value": "TEST",
                },
                {
                  "Key": "gu:repo",
                  "Value": "guardian/dotcom-rendering",
                },
                {
                  "Key": "Name",
                  "Value": "MobileAppsRendering/mobile-TEST-mobile-apps-rendering",
                },
                {
                  "Key": "Stack",
                  "Value": "mobile",
                },
                {
                  "Key": "Stage",
                  "Value": "TEST",
                },
              ],
            },
            {
              "ResourceType": "volume",
              "Tags": [
                {
                  "Key": "gu:cdk:version",
                  "Value": "TEST",
                },
                {
                  "Key": "gu:repo",
                  "Value": "guardian/dotcom-rendering",
                },
                {
                  "Key": "Name",
                  "Value": "MobileAppsRendering/mobile-TEST-mobile-apps-rendering",
                },
                {
                  "Key": "Stack",
                  "Value": "mobile",
                },
                {
                  "Key": "Stage",
                  "Value": "TEST",
                },
              ],
            },
          ],
          "UserData": {
            "Fn::Base64": {
              "Fn::Join": [
                "",
                [
                  "#!/bin/bash -ev
groupadd mapi
useradd -r -m -s /usr/bin/nologin -g mapi mobile-apps-rendering

export App=mobile-apps-rendering
export Stack=mobile
export Stage=TEST
export NODE_ENV=production

aws s3 cp s3://",
                  {
                    "Ref": "SsmParameterValueaccountservicesartifactbucketC96584B6F00A464EAD1953AFF4B05118Parameter",
                  },
                  "/mobile/TEST/mobile-apps-rendering/mobile-apps-rendering.zip /tmp
mkdir -p /opt/mobile-apps-rendering
unzip /tmp/mobile-apps-rendering.zip -d /opt/mobile-apps-rendering
chown -R mobile-apps-rendering:mapi /opt/mobile-apps-rendering

mkdir -p /usr/share/mobile-apps-rendering/logs
chown -R mobile-apps-rendering:mapi /usr/share/mobile-apps-rendering
ln -s /usr/share/mobile-apps-rendering/logs /var/log/mobile-apps-rendering
chown -R mobile-apps-rendering:mapi /var/log/mobile-apps-rendering

export PM2_HOME="/usr/share/mobile-apps-rendering"
export ASSETS_MANIFEST="/opt/mobile-apps-rendering/manifest.json"

/usr/local/node/pm2 start --name mobile-apps-rendering --uid mobile-apps-rendering --gid mapi /opt/mobile-apps-rendering/server.js
/opt/aws-kinesis-agent/configure-aws-kinesis-agent ",
                  {
                    "Ref": "AWS::Region",
                  },
                  " mobile-log-aggregation-TEST '/var/log/mobile-apps-rendering/*'
/usr/local/node/pm2 logrotate -u mobile-apps-rendering",
                ],
              ],
            },
          },
        },
        "TagSpecifications": [
          {
            "ResourceType": "launch-template",
            "Tags": [
              {
                "Key": "gu:cdk:version",
                "Value": "TEST",
              },
              {
                "Key": "gu:repo",
                "Value": "guardian/dotcom-rendering",
              },
              {
                "Key": "Name",
                "Value": "MobileAppsRendering/mobile-TEST-mobile-apps-rendering",
              },
              {
                "Key": "Stack",
                "Value": "mobile",
              },
              {
                "Key": "Stage",
                "Value": "TEST",
              },
            ],
          },
        ],
      },
      "Type": "AWS::EC2::LaunchTemplate",
    },
    "mobileTESTmobileappsrenderingProfileA8EFA7CB": {
      "Properties": {
        "Roles": [
          {
            "Ref": "InstanceRoleMobileappsrenderingEC64402A",
          },
        ],
      },
      "Type": "AWS::IAM::InstanceProfile",
    },
  },
}
`;

exports[`The MobileAppsRenderingPreview stack matches the snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuAllowPolicy",
      "GuVpcParameter",
      "GuSubnetListParameter",
      "GuSubnetListParameter",
      "GuEc2App",
      "GuCertificate",
      "GuInstanceRole",
      "GuDescribeEC2Policy",
      "GuLoggingStreamNameParameter",
      "GuLogShippingPolicy",
      "GuDistributionBucketParameter",
      "GuGetDistributablePolicy",
      "GuParameterStoreReadPolicy",
      "GuAmiParameter",
      "GuHttpsEgressSecurityGroup",
      "GuWazuhAccess",
      "GuAutoScalingGroup",
      "GuApplicationLoadBalancer",
      "GuApplicationTargetGroup",
      "GuHttpsApplicationListener",
      "GuSecurityGroup",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "LoadBalancerMobileappsrenderingDnsName": {
      "Description": "DNS entry for LoadBalancerMobileappsrendering",
      "Value": {
        "Fn::GetAtt": [
          "LoadBalancerMobileappsrenderingB8B00ACB",
          "DNSName",
        ],
      },
    },
  },
  "Parameters": {
    "AMIMobileappsrendering": {
      "Description": "Amazon Machine Image ID for the app mobile-apps-rendering. Use this in conjunction with AMIgo to keep AMIs up to date.",
      "Type": "AWS::EC2::Image::Id",
    },
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "LoggingStreamName": {
      "Default": "/account/services/logging.stream.name",
      "Description": "SSM parameter containing the Name (not ARN) on the kinesis stream",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValueaccountservicesartifactbucketC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/account/services/artifact.bucket",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "VpcId": {
      "Default": "/account/vpc/primary/id",
      "Description": "Virtual Private Cloud to run EC2 instances within. Should NOT be the account default VPC.",
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::VPC::Id>",
    },
    "mobileappsrenderingPrivateSubnets": {
      "Default": "/account/vpc/primary/subnets/private",
      "Description": "A list of private subnets",
      "Type": "AWS::SSM::Parameter::Value<List<AWS::EC2::Subnet::Id>>",
    },
    "mobileappsrenderingPublicSubnets": {
      "Default": "/account/vpc/primary/subnets/public",
      "Description": "A list of public subnets",
      "Type": "AWS::SSM::Parameter::Value<List<AWS::EC2::Subnet::Id>>",
    },
  },
  "Resources": {
    "AutoScalingGroupMobileappsrenderingASG42891F00": {
      "Properties": {
        "HealthCheckGracePeriod": 120,
        "HealthCheckType": "ELB",
        "LaunchTemplate": {
          "LaunchTemplateId": {
            "Ref": "mobilepreviewTESTmobileappsrenderingFF204ED7",
          },
          "Version": {
            "Fn::GetAtt": [
              "mobilepreviewTESTmobileappsrenderingFF204ED7",
              "LatestVersionNumber",
            ],
          },
        },
        "MaxSize": "2",
        "MinSize": "1",
        "Tags": [
          {
            "Key": "App",
            "PropagateAtLaunch": true,
            "Value": "mobile-apps-rendering",
          },
          {
            "Key": "gu:cdk:version",
            "PropagateAtLaunch": true,
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "PropagateAtLaunch": true,
            "Value": "guardian/dotcom-rendering",
          },
          {
            "Key": "LogKinesisStreamName",
            "PropagateAtLaunch": true,
            "Value": {
              "Ref": "LoggingStreamName",
            },
          },
          {
            "Key": "Stack",
            "PropagateAtLaunch": true,
            "Value": "mobile-preview",
          },
          {
            "Key": "Stage",
            "PropagateAtLaunch": true,
            "Value": "TEST",
          },
        ],
        "TargetGroupARNs": [
          {
            "Ref": "TargetGroupMobileappsrendering29320E35",
          },
        ],
        "VPCZoneIdentifier": {
          "Ref": "mobileappsrenderingPrivateSubnets",
        },
      },
      "Type": "AWS::AutoScaling::AutoScalingGroup",
    },
    "AutoScalingGroupMobileappsrenderingScalingPolicyCpuScalingPolicy25F424F1": {
      "Properties": {
        "AutoScalingGroupName": {
          "Ref": "AutoScalingGroupMobileappsrenderingASG42891F00",
        },
        "PolicyType": "TargetTrackingScaling",
        "TargetTrackingConfiguration": {
          "PredefinedMetricSpecification": {
            "PredefinedMetricType": "ASGAverageCPUUtilization",
          },
          "TargetValue": 10,
        },
      },
      "Type": "AWS::AutoScaling::ScalingPolicy",
    },
    "CertificateMobileappsrendering85649D08": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "DomainName": "mobile-preview-rendering.mobile-aws.code.dev-guardianapis.com",
        "DomainValidationOptions": [
          {
            "DomainName": "mobile-preview-rendering.mobile-aws.code.dev-guardianapis.com",
            "HostedZoneId": "TEST-HOSTED-ZONE-ID",
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          {
            "Key": "Name",
            "Value": "MobileAppsRenderingPreview/CertificateMobileappsrendering",
          },
          {
            "Key": "Stack",
            "Value": "mobile-preview",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "ValidationMethod": "DNS",
      },
      "Type": "AWS::CertificateManager::Certificate",
      "UpdateReplacePolicy": "Retain",
    },
    "DescribeEC2PolicyFF5F9295": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "autoscaling:DescribeAutoScalingInstances",
                "autoscaling:DescribeAutoScalingGroups",
                "ec2:DescribeTags",
                "ec2:DescribeInstances",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "describe-ec2-policy",
        "Roles": [
          {
            "Ref": "InstanceRoleMobileappsrenderingEC64402A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DnsRecord": {
      "Properties": {
        "HostedZoneId": "TEST-HOSTED-ZONE-ID",
        "Name": "mobile-preview-rendering.mobile-aws.code.dev-guardianapis.com.",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "LoadBalancerMobileappsrenderingB8B00ACB",
              "DNSName",
            ],
          },
        ],
        "TTL": "3600",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "GetDistributablePolicyMobileappsrendering8E649036": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:s3:::",
                    {
                      "Ref": "DistributionBucketName",
                    },
                    "/mobile-preview/TEST/mobile-apps-rendering/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "GetDistributablePolicyMobileappsrendering8E649036",
        "Roles": [
          {
            "Ref": "InstanceRoleMobileappsrenderingEC64402A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "GetParametersByPath37B32C62": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "GetParametersByPath37B32C62",
        "Roles": [
          {
            "Ref": "InstanceRoleMobileappsrenderingEC64402A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "GuHttpsEgressSecurityGroupMobileappsrendering089F1660": {
      "Properties": {
        "GroupDescription": "Allow all outbound HTTPS traffic",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound HTTPS traffic",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          {
            "Key": "Stack",
            "Value": "mobile-preview",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "VpcId": {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "GuHttpsEgressSecurityGroupMobileappsrenderingfromMobileAppsRenderingPreviewInternalIngressSecurityGroupMobileappsrendering981D8A7F30401C964232": {
      "Properties": {
        "Description": "Load balancer to target",
        "FromPort": 3040,
        "GroupId": {
          "Fn::GetAtt": [
            "GuHttpsEgressSecurityGroupMobileappsrendering089F1660",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "InternalIngressSecurityGroupMobileappsrendering486B411A",
            "GroupId",
          ],
        },
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "GuHttpsEgressSecurityGroupMobileappsrenderingfromMobileAppsRenderingPreviewLoadBalancerMobileappsrenderingSecurityGroupA08E152F304032151D11": {
      "Properties": {
        "Description": "Load balancer to target",
        "FromPort": 3040,
        "GroupId": {
          "Fn::GetAtt": [
            "GuHttpsEgressSecurityGroupMobileappsrendering089F1660",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "LoadBalancerMobileappsrenderingSecurityGroup86D57550",
            "GroupId",
          ],
        },
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "GuLogShippingPolicy981BFE5A": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "kinesis:Describe*",
                "kinesis:Put*",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:kinesis:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":stream/",
                    {
                      "Ref": "LoggingStreamName",
                    },
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "GuLogShippingPolicy981BFE5A",
        "Roles": [
          {
            "Ref": "InstanceRoleMobileappsrenderingEC64402A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "InstanceRoleMobileappsrenderingEC64402A": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ec2.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/AmazonSSMManagedInstanceCore",
              ],
            ],
          },
        ],
        "Path": "/",
        "Tags": [
          {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          {
            "Key": "Stack",
            "Value": "mobile-preview",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "InternalIngressSecurityGroupMobileappsrendering486B411A": {
      "Properties": {
        "GroupDescription": "Allow restricted ingress from CIDR ranges",
        "SecurityGroupIngress": [
          {
            "CidrIp": "10.0.0.0/8",
            "Description": "Allow access on port 443 from 10.0.0.0/8",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          {
            "Key": "Stack",
            "Value": "mobile-preview",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "VpcId": {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "InternalIngressSecurityGroupMobileappsrenderingtoMobileAppsRenderingPreviewGuHttpsEgressSecurityGroupMobileappsrendering86AAA55B30406414828D": {
      "Properties": {
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "GuHttpsEgressSecurityGroupMobileappsrendering089F1660",
            "GroupId",
          ],
        },
        "FromPort": 3040,
        "GroupId": {
          "Fn::GetAtt": [
            "InternalIngressSecurityGroupMobileappsrendering486B411A",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupEgress",
    },
    "InternalIngressSecurityGroupMobileappsrenderingtoMobileAppsRenderingPreviewWazuhSecurityGroupBFDBFD7E3040AC7A9AEE": {
      "Properties": {
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "WazuhSecurityGroup",
            "GroupId",
          ],
        },
        "FromPort": 3040,
        "GroupId": {
          "Fn::GetAtt": [
            "InternalIngressSecurityGroupMobileappsrendering486B411A",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupEgress",
    },
    "ListenerMobileappsrendering47F84352": {
      "Properties": {
        "Certificates": [
          {
            "CertificateArn": {
              "Ref": "CertificateMobileappsrendering85649D08",
            },
          },
        ],
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "TargetGroupMobileappsrendering29320E35",
            },
            "Type": "forward",
          },
        ],
        "LoadBalancerArn": {
          "Ref": "LoadBalancerMobileappsrenderingB8B00ACB",
        },
        "Port": 443,
        "Protocol": "HTTPS",
      },
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
    },
    "LoadBalancerMobileappsrenderingB8B00ACB": {
      "Properties": {
        "LoadBalancerAttributes": [
          {
            "Key": "deletion_protection.enabled",
            "Value": "true",
          },
        ],
        "Scheme": "internal",
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "LoadBalancerMobileappsrenderingSecurityGroup86D57550",
              "GroupId",
            ],
          },
          {
            "Fn::GetAtt": [
              "InternalIngressSecurityGroupMobileappsrendering486B411A",
              "GroupId",
            ],
          },
        ],
        "Subnets": {
          "Ref": "mobileappsrenderingPrivateSubnets",
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          {
            "Key": "Stack",
            "Value": "mobile-preview",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "Type": "application",
      },
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
    },
    "LoadBalancerMobileappsrenderingSecurityGroup86D57550": {
      "Properties": {
        "GroupDescription": "Automatically created Security Group for ELB MobileAppsRenderingPreviewLoadBalancerMobileappsrenderingA476639F",
        "Tags": [
          {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          {
            "Key": "Stack",
            "Value": "mobile-preview",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "VpcId": {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "LoadBalancerMobileappsrenderingSecurityGrouptoMobileAppsRenderingPreviewGuHttpsEgressSecurityGroupMobileappsrendering86AAA55B3040C6508311": {
      "Properties": {
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "GuHttpsEgressSecurityGroupMobileappsrendering089F1660",
            "GroupId",
          ],
        },
        "FromPort": 3040,
        "GroupId": {
          "Fn::GetAtt": [
            "LoadBalancerMobileappsrenderingSecurityGroup86D57550",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupEgress",
    },
    "LoadBalancerMobileappsrenderingSecurityGrouptoMobileAppsRenderingPreviewWazuhSecurityGroupBFDBFD7E304032ED6346": {
      "Properties": {
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "WazuhSecurityGroup",
            "GroupId",
          ],
        },
        "FromPort": 3040,
        "GroupId": {
          "Fn::GetAtt": [
            "LoadBalancerMobileappsrenderingSecurityGroup86D57550",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupEgress",
    },
    "ParameterStoreReadMobileappsrenderingA4006661": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/TEST/mobile-preview/mobile-apps-rendering",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/TEST/mobile-preview/mobile-apps-rendering/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "parameter-store-read-policy",
        "Roles": [
          {
            "Ref": "InstanceRoleMobileappsrenderingEC64402A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "TargetGroupMobileappsrendering29320E35": {
      "Properties": {
        "HealthCheckIntervalSeconds": 10,
        "HealthCheckPath": "/healthcheck",
        "HealthCheckProtocol": "HTTP",
        "HealthCheckTimeoutSeconds": 5,
        "HealthyThresholdCount": 5,
        "Port": 3040,
        "Protocol": "HTTP",
        "Tags": [
          {
            "Key": "App",
            "Value": "mobile-apps-rendering",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          {
            "Key": "Stack",
            "Value": "mobile-preview",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "TargetGroupAttributes": [
          {
            "Key": "deregistration_delay.timeout_seconds",
            "Value": "30",
          },
          {
            "Key": "stickiness.enabled",
            "Value": "false",
          },
        ],
        "TargetType": "instance",
        "UnhealthyThresholdCount": 2,
        "VpcId": {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
    },
    "WazuhSecurityGroup": {
      "Properties": {
        "GroupDescription": "Allow outbound traffic from wazuh agent to manager",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Wazuh event logging",
            "FromPort": 1514,
            "IpProtocol": "tcp",
            "ToPort": 1514,
          },
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Wazuh agent registration",
            "FromPort": 1515,
            "IpProtocol": "tcp",
            "ToPort": 1515,
          },
        ],
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering",
          },
          {
            "Key": "Stack",
            "Value": "mobile-preview",
          },
          {
            "Key": "Stage",
            "Value": "TEST",
          },
        ],
        "VpcId": {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "WazuhSecurityGroupfromMobileAppsRenderingPreviewInternalIngressSecurityGroupMobileappsrendering981D8A7F30409D4BEBFF": {
      "Properties": {
        "Description": "Load balancer to target",
        "FromPort": 3040,
        "GroupId": {
          "Fn::GetAtt": [
            "WazuhSecurityGroup",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "InternalIngressSecurityGroupMobileappsrendering486B411A",
            "GroupId",
          ],
        },
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "WazuhSecurityGroupfromMobileAppsRenderingPreviewLoadBalancerMobileappsrenderingSecurityGroupA08E152F3040CC90354B": {
      "Properties": {
        "Description": "Load balancer to target",
        "FromPort": 3040,
        "GroupId": {
          "Fn::GetAtt": [
            "WazuhSecurityGroup",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "LoadBalancerMobileappsrenderingSecurityGroup86D57550",
            "GroupId",
          ],
        },
        "ToPort": 3040,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "mobilepreviewTESTmobileappsrenderingFF204ED7": {
      "DependsOn": [
        "InstanceRoleMobileappsrenderingEC64402A",
      ],
      "Properties": {
        "LaunchTemplateData": {
          "IamInstanceProfile": {
            "Arn": {
              "Fn::GetAtt": [
                "mobilepreviewTESTmobileappsrenderingProfile72DADF5F",
                "Arn",
              ],
            },
          },
          "ImageId": {
            "Ref": "AMIMobileappsrendering",
          },
          "InstanceType": "t4g.micro",
          "MetadataOptions": {
            "HttpTokens": "required",
          },
          "SecurityGroupIds": [
            {
              "Fn::GetAtt": [
                "GuHttpsEgressSecurityGroupMobileappsrendering089F1660",
                "GroupId",
              ],
            },
            {
              "Fn::GetAtt": [
                "WazuhSecurityGroup",
                "GroupId",
              ],
            },
          ],
          "TagSpecifications": [
            {
              "ResourceType": "instance",
              "Tags": [
                {
                  "Key": "gu:cdk:version",
                  "Value": "TEST",
                },
                {
                  "Key": "gu:repo",
                  "Value": "guardian/dotcom-rendering",
                },
                {
                  "Key": "Name",
                  "Value": "MobileAppsRenderingPreview/mobile-preview-TEST-mobile-apps-rendering",
                },
                {
                  "Key": "Stack",
                  "Value": "mobile-preview",
                },
                {
                  "Key": "Stage",
                  "Value": "TEST",
                },
              ],
            },
            {
              "ResourceType": "volume",
              "Tags": [
                {
                  "Key": "gu:cdk:version",
                  "Value": "TEST",
                },
                {
                  "Key": "gu:repo",
                  "Value": "guardian/dotcom-rendering",
                },
                {
                  "Key": "Name",
                  "Value": "MobileAppsRenderingPreview/mobile-preview-TEST-mobile-apps-rendering",
                },
                {
                  "Key": "Stack",
                  "Value": "mobile-preview",
                },
                {
                  "Key": "Stage",
                  "Value": "TEST",
                },
              ],
            },
          ],
          "UserData": {
            "Fn::Base64": {
              "Fn::Join": [
                "",
                [
                  "#!/bin/bash -ev
groupadd mapi
useradd -r -m -s /usr/bin/nologin -g mapi mobile-apps-rendering

export App=mobile-apps-rendering
export Stack=mobile-preview
export Stage=TEST
export NODE_ENV=production

aws s3 cp s3://",
                  {
                    "Ref": "SsmParameterValueaccountservicesartifactbucketC96584B6F00A464EAD1953AFF4B05118Parameter",
                  },
                  "/mobile-preview/TEST/mobile-apps-rendering/mobile-apps-rendering.zip /tmp
mkdir -p /opt/mobile-apps-rendering
unzip /tmp/mobile-apps-rendering.zip -d /opt/mobile-apps-rendering
chown -R mobile-apps-rendering:mapi /opt/mobile-apps-rendering

mkdir -p /usr/share/mobile-apps-rendering/logs
chown -R mobile-apps-rendering:mapi /usr/share/mobile-apps-rendering
ln -s /usr/share/mobile-apps-rendering/logs /var/log/mobile-apps-rendering
chown -R mobile-apps-rendering:mapi /var/log/mobile-apps-rendering

export PM2_HOME="/usr/share/mobile-apps-rendering"
export ASSETS_MANIFEST="/opt/mobile-apps-rendering/manifest.json"

/usr/local/node/pm2 start --name mobile-apps-rendering --uid mobile-apps-rendering --gid mapi /opt/mobile-apps-rendering/server.js
/opt/aws-kinesis-agent/configure-aws-kinesis-agent ",
                  {
                    "Ref": "AWS::Region",
                  },
                  " mobile-log-aggregation-TEST '/var/log/mobile-apps-rendering/*'
/usr/local/node/pm2 logrotate -u mobile-apps-rendering",
                ],
              ],
            },
          },
        },
        "TagSpecifications": [
          {
            "ResourceType": "launch-template",
            "Tags": [
              {
                "Key": "gu:cdk:version",
                "Value": "TEST",
              },
              {
                "Key": "gu:repo",
                "Value": "guardian/dotcom-rendering",
              },
              {
                "Key": "Name",
                "Value": "MobileAppsRenderingPreview/mobile-preview-TEST-mobile-apps-rendering",
              },
              {
                "Key": "Stack",
                "Value": "mobile-preview",
              },
              {
                "Key": "Stage",
                "Value": "TEST",
              },
            ],
          },
        ],
      },
      "Type": "AWS::EC2::LaunchTemplate",
    },
    "mobilepreviewTESTmobileappsrenderingProfile72DADF5F": {
      "Properties": {
        "Roles": [
          {
            "Ref": "InstanceRoleMobileappsrenderingEC64402A",
          },
        ],
      },
      "Type": "AWS::IAM::InstanceProfile",
    },
  },
}
`;
